--- a/tehnomart/catalog.html
+++ b/tehnomart/catalog.html
@@ -11,7 +11,7 @@
     <div class="header-top">
       <div class="top-logo">
         <a href="">
-          <img src="img/logo.png" alt="Техномарт">
+          <img src="img/logo-header.png" width="220" height="47" alt="Техномарт">
         </a>
       </div>
       <input type="search" placeholder="Поиск">
@@ -100,7 +100,7 @@
     <div class="catalog-product">
       <div class="product-item">
         <figure>
-          <img src="" width="220" height="150" alt="Перфоратор BOSCH BFG 3000">
+          <img src="img/product-1.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
         </figure>
         <span class="product-name">Перфоратор BOSCH BFG 3000</span>
         <span class="old-price">22500 Р.</span>
@@ -108,7 +108,7 @@
       </div>
       <div class="product-item">
         <figure>
-          <img src="" width="220" height="150" alt="Перфоратор BOSCH BFG 6000">
+          <img src="img/product-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
         </figure>
         <span class="product-name">Перфоратор BOSCH BFG 6000</span>
         <span class="old-price">30500 Р.</span>
@@ -116,7 +116,7 @@
       </div>
       <div class="product-item">
         <figure>
-          <img src="" width="220" height="150" alt="Перфоратор BOSCH BFG 2000">
+          <img src="img/product-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
         </figure>
         <button class="btn" type="button">Купить</button>
         <button class="btn" type="button">В закладки</button>
@@ -126,15 +126,15 @@
       </div>
       <div class="product-item">
           <figure>
-            <img src="" width="220" height="150" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/product-4.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
           </figure>
           <span class="product-name">Перфоратор BOSCH BFG 3000</span>
           <span class="old-price">22500 Р.</span>
           <span class="price">15500 Р.</span>
-        </div>
+      </div>
         <div class="product-item">
           <figure>
-            <img src="" width="220" height="150" alt="Перфоратор BOSCH BFG 6000">
+            <img src="img/product-5.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
           </figure>
           <span class="product-name">Перфоратор BOSCH BFG 6000</span>
           <span class="old-price">30500 Р.</span>
@@ -143,14 +143,14 @@
         </div>
         <div class="product-item">
           <figure>
-            <img src="" width="220" height="150" alt="Перфоратор BOSCH BFG 2000">
+            <img src="img/product-6.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
           </figure>
           <span class="product-name">Перфоратор BOSCH BFG 2000</span>
           <span class="price">25500 Р.</span>
         </div>
         <div class="product-item">
             <figure>
-              <img src="" width="220" height="150" alt="Перфоратор BOSCH BFG 3000">
+              <img src="img/product-7.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
             </figure>
             <span class="product-name">Перфоратор BOSCH BFG 3000</span>
             <span class="old-price">22500 Р.</span>
@@ -159,7 +159,7 @@
           </div>
           <div class="product-item">
             <figure>
-              <img src="" width="220" height="150" alt="Перфоратор BOSCH BFG 6000">
+              <img src="img/product-8.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
             </figure>
             <span class="product-name">Перфоратор BOSCH BFG 6000</span>
             <span class="old-price">30500 Р.</span>
@@ -167,7 +167,7 @@
           </div>
           <div class="product-item">
             <figure>
-              <img src="" width="220" height="150" alt="Перфоратор BOSCH BFG 2000">
+              <img src="img/product-9.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
             </figure>
             <span class="product-name">Перфоратор BOSCH BFG 2000</span>
             <span class="price">25500 Р.</span>
@@ -192,163 +192,13 @@
 
  
 
-    <section class="popular">
-      <div>
-        <h2>Популярные товары</h2>
-        <a class="btn" href="">все популярные товары</a>
-      </div>
-      <div class="popular-product">
-        <div class="product-item">
-          <figure>
-            <img src="" width="127" height="112" alt="Перфоратор BOSCH BFG 9000">
-          </figure>
-          <span class="product-name">Перфоратор BOSCH BFG 9000</span>
-          <span class="old-price">32500 Р.</span>
-          <span class="price">25500 Р.</span>
-        </div>
-        <div class="product-item">
-          <figure>
-            <img src="" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
-          </figure>
-          <span class="product-name">Перфоратор BOSCH BFG 3000</span>
-          <span class="old-price">22500 Р.</span>
-          <span class="price">15500 Р.</span>
-        </div>
-        <div class="product-item">
-          <figure>
-            <img src="" width="127" height="112" alt="Перфоратор BOSCH BFG 6000">
-          </figure>
-          <span class="product-name">Перфоратор BOSCH BFG 6000</span>
-          <span class="old-price">30500 Р.</span>
-          <span class="price">25500 Р.</span>
-        </div>
-        <div class="product-item">
-          <figure>
-            <img src="" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
-          </figure>
-          <span class="product-name">Перфоратор BOSCH BFG 2000</span>
-          <span class="new">new</span>
-          <span class="price">12500 Р.</span>
-        </div>
-      </div>
-    </section>
-    <section class="brands">
-      <div>
-        <h2>Популярные производители:</h2>
-        <a class="btn" href="">все популярные товары</a>
-      </div>
-      <div class="brands-item">
-        <figure>
-          <img src="" width="124" height="32" alt="bosch">
-        </figure>
-      </div>
-      <div class="brands-item">
-        <figure>
-          <img src="" width="123" height="40" alt="makita">
-        </figure>
-      </div>
-      <div class="brands-item">
-        <figure>
-          <img src="" width="146" height="44" alt="deWalt">
-        </figure>
-      </div>
-      <div class="brands-item">
-        <figure>
-          <img src="" width="200" height="88" alt="Интерскол">
-        </figure>
-      </div>
-      <div class="brands-item">
-        <figure>
-          <img src="" width="168" height="31" alt="Hitachi">
-        </figure>
-      </div>
-      <div class="brands-item">
-        <figure>
-          <img src="" width="121" height="73" alt="LG">
-        </figure>
-      </div>
-      <div class="brands-item">
-        <figure>
-          <img src="" width="151" height="96" alt="AEG">
-        </figure>
-      </div>
-      <div class="brands-item">
-        <figure>
-          <img src="" width="204" height="69" alt="Metabo">
-        </figure>
-      </div>
-    </section>
-    <section class="service">
-      <h2>Сервисы</h2>
-      <p>Хороший интернет-магазин отличается от плохого не толь</p>
-      <ul>
-        <li>Доставка</li>
-        <li>Гарантия</li>
-        <li>Кредит</li>
-      </ul>
-      <div class="sevice-list">
-        <div class="service-item delivery">
-          <h3>Доставка</h3>
-          <p>
-              Мы с удовольствием доставим ваш товар прямо 
-              к вашему подъезду совершенно бесплатно!
-              Ведь мы неплохо заработаем, 
-              поднимая его на ваш этаж!
-          </p>
-          <img src="" width="240" height="61" alt="Доставка">
-        </div>
-        <div class="service-item delivery">
-          <h3>Гарантия</h3>
-          <p>
-              Если купленный у нас товар поломается или заискрит, 
-              а также в случае пожара, спровоцированного его возгаранием,  
-              вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. 
-              Дом уж восстановите как-нибудь сами.
-          </p>
-          <img src="" width="172" height="170" alt="Гарантия">
-        </div>
-        <div class="service-item delivery">
-          <h3>Кредит</h3>
-          <p>
-              Залезть в долговую яму стало проще! 
-              Кредитные консультанты придут вам на помощь.
-          </p>
-          <a href="" class="btn">ОТПРАВИТЬ ЗАЯВКУ</a>
-          <img src="" width="181" height="184" alt="Кредит">
-        </div>
-      </div>
-    </section>
-    <section class="information">
-      <div class="about-us">
-        <h3>КОМПАНИЯ «Техномарт»</h3>
-        <p> Настоящий мужской шоппинг начинается здесь! 
-          Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.
-        </p>
-        <p>
-            Мы можем доставить ваш товар в самые отдаленные точки России!
-            Техномарт работает со многими транспортными компаниями: 
-        </p>
-        <ul>
-          <li>Деловые линии</li>
-          <li>Автотрейдинг</li>
-          <li>ЖелДорЭкспедиция</li>
-        </ul>
-        <a href="" class="btn">Подробнее о компании</a>
-      </div>
-      <div class="contact">
-        <h3>КОНТАКТЫ</h3>
-        <p>Вы можете забрать товар сами, <br>
-            заехав в наш офис:
-          </p>
-        <div class="map"></div>
-        <a href="" class="btn">Заблудились? Напишите нам!</a>
-      </div>
-    </section>
+
+
     <footer class="main-footer">
       <div class="footer-top container">
         <div class="footer-logo">
           <a href="">
-            <img src="img/logo.png" alt="Техномарт">
+            <img src="img/logo-footer.png" width="220" height="68" alt="Техномарт">
           </a>
         </div>
         <nav>
@@ -392,7 +242,9 @@
       </div>
     </footer>
   </main>
-  <div class="popup map"></div>
+  <div class="popup map">
+    <img src="img/map.png" width="970" height="476" alt="ул. Большая Конюшенная 19">
+  </div>
   <div class="feadback poupup">
     <form action="">
       <label>Ваше имя <input type="text" placeholder="Представьтесь, пожалуйста"></label>
