--- a/tehnomart/index.html
+++ b/tehnomart/index.html
@@ -11,7 +11,7 @@
     <div class="header-top">
       <div class="top-logo">
         <a href="">
-          <img src="img/logo.png" alt="Техномарт">
+          <img src="img/logo-header.png" width="220" height="47" alt="Техномарт">
         </a>
       </div>
       <input type="search" placeholder="Поиск">
@@ -63,13 +63,13 @@
     <section class="properties">
         <div class="slider item">
           <div class="item">
-            <img src="" alt="Префораторы">
+            <img src="img/slide-1.jpg" width="620" height="266" alt="Префораторы">
             <h3>Префораторы</h3>
             <p>Настоящие мужские игрушки</p>
             <a class="btn" href="">ОТКРЫТЬ КАТАЛОГ</a>
           </div>
           <div class="item">
-            <img src="" alt="Дрели ">
+            <img src="img/slide-2.jpg" width="620" height="266" alt="Дрели ">
             <h3>Дрели </h3>
             <p>Соседям на радость!</p>
             <a class="btn" href="">ОТКРЫТЬ КАТАЛОГ</a>
@@ -94,7 +94,7 @@
       <div class="popular-product">
         <div class="product-item">
           <figure>
-            <img src="" width="127" height="112" alt="Перфоратор BOSCH BFG 9000">
+            <img src="img/pop-product-1.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
           </figure>
           <span class="product-name">Перфоратор BOSCH BFG 9000</span>
           <span class="old-price">32500 Р.</span>
@@ -102,7 +102,7 @@
         </div>
         <div class="product-item">
           <figure>
-            <img src="" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/pop-product-2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
           </figure>
           <span class="product-name">Перфоратор BOSCH BFG 3000</span>
           <span class="old-price">22500 Р.</span>
@@ -110,7 +110,7 @@
         </div>
         <div class="product-item">
           <figure>
-            <img src="" width="127" height="112" alt="Перфоратор BOSCH BFG 6000">
+            <img src="img/pop-product-3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
           </figure>
           <span class="product-name">Перфоратор BOSCH BFG 6000</span>
           <span class="old-price">30500 Р.</span>
@@ -118,7 +118,7 @@
         </div>
         <div class="product-item">
           <figure>
-            <img src="" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+            <img src="img/pop-product-4.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
           </figure>
           <span class="product-name">Перфоратор BOSCH BFG 2000</span>
           <span class="new">new</span>
@@ -133,42 +133,42 @@
       </div>
       <div class="brands-item">
         <figure>
-          <img src="" width="124" height="32" alt="bosch">
+          <img src="img/brand-1.jpg" width="124" height="32" alt="bosch">
         </figure>
       </div>
       <div class="brands-item">
         <figure>
-          <img src="" width="123" height="40" alt="makita">
+          <img src="img/brand-2.jpg" width="123" height="40" alt="makita">
         </figure>
       </div>
       <div class="brands-item">
         <figure>
-          <img src="" width="146" height="44" alt="deWalt">
+          <img src="img/brand-3.jpg" width="146" height="44" alt="deWalt">
         </figure>
       </div>
       <div class="brands-item">
         <figure>
-          <img src="" width="200" height="88" alt="Интерскол">
+          <img src="img/brand-4.jpg" width="200" height="88" alt="Интерскол">
         </figure>
       </div>
       <div class="brands-item">
         <figure>
-          <img src="" width="168" height="31" alt="Hitachi">
+          <img src="img/brand-5.jpg" width="168" height="31" alt="Hitachi">
         </figure>
       </div>
       <div class="brands-item">
         <figure>
-          <img src="" width="121" height="73" alt="LG">
+          <img src="img/brand-6.jpg" width="121" height="73" alt="LG">
         </figure>
       </div>
       <div class="brands-item">
         <figure>
-          <img src="" width="151" height="96" alt="AEG">
+          <img src="img/brand-7.jpg" width="151" height="96" alt="AEG">
         </figure>
       </div>
       <div class="brands-item">
         <figure>
-          <img src="" width="204" height="69" alt="Metabo">
+          <img src="img/brand-8.jpg" width="204" height="69" alt="Metabo">
         </figure>
       </div>
     </section>
@@ -189,9 +189,9 @@
               Ведь мы неплохо заработаем, 
               поднимая его на ваш этаж!
           </p>
-          <img src="" width="240" height="61" alt="Доставка">
+          <img src="img/service-1.png" width="468" height="261" alt="Доставка">
         </div>
-        <div class="service-item delivery">
+        <div class="service-item guarantee">
           <h3>Гарантия</h3>
           <p>
               Если купленный у нас товар поломается или заискрит, 
@@ -199,16 +199,16 @@
               вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. 
               Дом уж восстановите как-нибудь сами.
           </p>
-          <img src="" width="172" height="170" alt="Гарантия">
+          <img src="img/service-2.png" width="398" height="283" alt="Гарантия">
         </div>
-        <div class="service-item delivery">
+        <div class="service-item credit">
           <h3>Кредит</h3>
           <p>
               Залезть в долговую яму стало проще! 
               Кредитные консультанты придут вам на помощь.
           </p>
           <a href="" class="btn">ОТПРАВИТЬ ЗАЯВКУ</a>
-          <img src="" width="181" height="184" alt="Кредит">
+          <img src="img/service-3.png" width="465" height="285" alt="Кредит">
         </div>
       </div>
     </section>
@@ -234,7 +234,9 @@
         <p>Вы можете забрать товар сами, <br>
             заехав в наш офис:
           </p>
-        <div class="map"></div>
+        <div class="map">
+          <img src="img/mini-map.jpg" width="300" height="158" alt="ул. Большая Конюшенная 19">
+        </div>
         <a href="" class="btn">Заблудились? Напишите нам!</a>
       </div>
     </section>
@@ -242,7 +244,7 @@
       <div class="footer-top container">
         <div class="footer-logo">
           <a href="">
-            <img src="img/logo.png" alt="Техномарт">
+            <img src="img/logo-footer.png" width="220" height="68" alt="Техномарт">
           </a>
         </div>
         <nav>
@@ -286,7 +288,9 @@
       </div>
     </footer>
   </main>
-  <div class="popup map"></div>
+  <div class="popup map">
+    <img src="img/map.png" width="970" height="476" alt="ул. Большая Конюшенная 19">
+  </div>
   <div class="feadback poupup">
     <form action="">
       <label>Ваше имя <input type="text" placeholder="Представьтесь, пожалуйста"></label>
